mynode-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mynode-app
  namespace: nodejs
spec:
  type: NodePort
  selector:
    app: mynode-app
  ports:
    - port: 80
      targetPort: 8080
