mynode-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mynode-ingress
  namespace: nodejs
spec:
  rules:
  - host: mynodeapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: mynode-app
            port: 
              number: 80
